// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList when no expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger"
    >
      Expense
    </div>
    <div
      className="show-for-larger"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses to show
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with testExpenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-larger"
    >
      Expense
    </div>
    <div
      className="show-for-larger"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpListItem
      amount={4500}
      createdAt={345600000}
      description="Credit card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;
